setting page alignment fixed

--- a/app/src/sass/style.scss
+++ b/app/src/sass/style.scss
@@ -616,7 +616,7 @@ main{
     justify-content: center;
     .content{
       font-size: 1.2rem;
-      height: 60vh;
+      height: 40vh;
       display: flex;
       align-items: center;
       justify-content: center;
